landscape-flare/src/tui/snapshots/lflare__tui__snapshots__dash-mapping-overflow-en.snap
---
source: landscape-flare/src/tui/snapshots.rs
expression: terminal.backend()
---
"                                    lflare · Landscape L2 Session                                   "
"┌Connection────────────────────────────────────────────────────────────────────────────────────────┐"
"│Status: Connected · session 42 · aa:bb:cc:dd:ee:ff                                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Mappings (a add · d delete)───────────────────────────────────────────────────────────────────────┐"
"│  ✓ 127.0.0.1:20000 -> router 127.0.0.1:8000                                                      │"
"│  ✓ 127.0.0.1:20010 -> router 127.0.0.1:8001                                                      │"
"│  ✓ 127.0.0.1:20020 -> router 127.0.0.1:8002                                                      │"
"│  ✓ 127.0.0.1:20030 -> router 127.0.0.1:8003                                                      │"
"│▸ ✓ 127.0.0.1:20040 -> router 127.0.0.1:8004                                                      │"
"│... 7 mappings (focused · Up Down scroll)                                                         │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Log───────────────────────────────────────────────────────────────────────────────────────────────┐"
"│listening for server advertisements on the wire                                                   │"
"│server discovered, exchanging handshake keys                                                      │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"Up Down select mappings · PgUp PgDn scroll · a add d delete · q disconnect and quit · L  Language: E"
