landscape-flare/src/tui/snapshots/lflare__tui__snapshots__dash-peer-closed-en.snap
---
source: landscape-flare/src/tui/snapshots.rs
expression: terminal.backend()
---
"                                    lflare · Landscape L2 Session                                   "
"┌Connection────────────────────────────────────────────────────────────────────────────────────────┐"
"│Status: Server closed the session                                                                 │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Mappings (waiting for handshake)──────────────────────────────────────────────────────────────────┐"
"│Manage mappings after handshake succeeds                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Log───────────────────────────────────────────────────────────────────────────────────────────────┐"
"│listening for server advertisements on the wire                                                   │"
"│server discovered, exchanging handshake keys                                                      │"
"│✗ server closed the session (shutdown)                                                            │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"Up focus mappings · PgUp PgDn scroll logs · a add mapping · F3 switch language · q disconnect and qu"
