landscape-flare/src/tui/snapshots/lflare__tui__snapshots__dash-ready-empty-en.snap
---
source: landscape-flare/src/tui/snapshots.rs
expression: terminal.backend()
---
"                                    lflare · Landscape L2 Session                                   "
"┌Connection────────────────────────────────────────────────────────────────────────────────────────┐"
"│Status: Connected · session 42 · aa:bb:cc:dd:ee:ff                                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Mappings (a add · d delete)───────────────────────────────────────────────────────────────────────┐"
"│No port mappings                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Log───────────────────────────────────────────────────────────────────────────────────────────────┐"
"│keepalive exchange 7 ok                                                                           │"
"│keepalive exchange 8 ok                                                                           │"
"│keepalive exchange 9 ok                                                                           │"
"│keepalive exchange 10 ok                                                                          │"
"│keepalive exchange 11 ok                                                                          │"
"│keepalive exchange 12 ok                                                                          │"
"│keepalive exchange 13 ok                                                                          │"
"│keepalive exchange 14 ok                                                                          │"
"│keepalive exchange 15 ok                                                                          │"
"│keepalive exchange 16 ok                                                                          │"
"│keepalive exchange 17 ok                                                                          │"
"│keepalive exchange 18 ok                                                                          │"
"│keepalive exchange 19 ok                                                                          │"
"│keepalive exchange 20 ok                                                                          │"
"│keepalive exchange 21 ok                                                                          │"
"│keepalive exchange 22 ok                                                                          │"
"│keepalive exchange 23 ok                                                                          │"
"│(bottom · Up scrolls through log history)                                                         │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"Up focus mappings · PgUp PgDn scroll logs · a add mapping · F3 switch language · q disconnect and qu"
