landscape-flare/src/tui/snapshots/lflare__tui__snapshots__dash-ready-mappings-en.snap
---
source: landscape-flare/src/tui/snapshots.rs
expression: terminal.backend()
---
"                                    lflare · Landscape L2 Session                                   "
"┌Connection────────────────────────────────────────────────────────────────────────────────────────┐"
"│Status: Connected · session 42 · aa:bb:cc:dd:ee:ff                                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Mappings (a add · d delete)───────────────────────────────────────────────────────────────────────┐"
"│  ✓ 127.0.0.1:8022 -> router 127.0.0.1:22                                                         │"
"│▸ … 127.0.0.1:8443 -> router 127.0.0.1:443                                                        │"
"│  ✗ 127.0.0.1:8080 -> router 127.0.0.1:80                                                         │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Log───────────────────────────────────────────────────────────────────────────────────────────────┐"
"│listening for server advertisements on the wire                                                   │"
"│server discovered, exchanging handshake keys                                                      │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"Up Down select mappings · PgUp PgDn scroll · a add d delete · q disconnect and quit · L  Language: E"
