landscape-flare/src/tui/snapshots/lflare__tui__snapshots__dash-ready-mappings-zh.snap
---
source: landscape-flare/src/tui/snapshots.rs
expression: terminal.backend()
---
"                                     lflare · Landscape L2 会话                                     " Hidden by multi-width symbols: [(60, " "), (62, " ")]
"┌连接状态──────────────────────────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(2, " "), (4, " "), (6, " "), (8, " ")]
"│状态：已连接 · 会话 42 · aa:bb:cc:dd:ee:ff                                                        │" Hidden by multi-width symbols: [(2, " "), (4, " "), (6, " "), (8, " "), (10, " "), (12, " "), (17, " "), (19, " ")]
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌端口映射（a 添加 · d 删除）───────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(2, " "), (4, " "), (6, " "), (8, " "), (10, " "), (14, " "), (16, " "), (23, " "), (25, " "), (27, " ")]
"│▸ ✓ 127.0.0.1:8022 -> 路由器 127.0.0.1:22                                                         │" Hidden by multi-width symbols: [(24, " "), (26, " "), (28, " ")]
"│  ✗ 127.0.0.1:8443 -> 路由器 127.0.0.1:443                                                        │" Hidden by multi-width symbols: [(24, " "), (26, " "), (28, " ")]
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌日志──────────────────────────────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(2, " "), (4, " ")]
"│listening for server advertisements on the wire                                                   │"
"│server discovered, exchanging handshake keys                                                      │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"上下选择映射 · PgUp/PgDn 滚动 · a 添加 d 删除 · q 断开并退出 · L  语言：中文（zh）                  " Hidden by multi-width symbols: [(1, " "), (3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (26, " "), (28, " "), (35, " "), (37, " "), (42, " "), (44, " "), (51, " "), (53, " "), (55, " "), (57, " "), (59, " "), (67, " "), (69, " "), (71, " "), (73, " "), (75, " "), (77, " "), (81, " ")]
