landscape-flare/src/tui/snapshots/lflare__tui__snapshots__form-default-en.snap
---
source: landscape-flare/src/tui/snapshots.rs
expression: terminal.backend()
---
"                                    lflare · Landscape L2 Client                                    "
"Tab/Up Down navigate fields · focus Connect and press Enter · F2 show/hide PSK · F3 switch language "
"┌PSK (shared secret, F2 show/hide)─────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Username──────────────────────────────────────────────────────────────────────────────────────────┐"
"│admin                                                                                             │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Client name───────────────────────────────────────────────────────────────────────────────────────┐"
"│pc                                                                                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Device (Enter to select)──────────────────────────────────────────────────────────────────────────┐"
"│Auto (default route)                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Ethertype─────────────────────────────────────────────────────────────────────────────────────────┐"
"│0x88b6                                                                                            │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Token (optional, must match server)───────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Connect───────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                              Connect                                             │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
