landscape-flare/src/tui/snapshots/lflare__tui__snapshots__form-device-picker-en.snap
---
source: landscape-flare/src/tui/snapshots.rs
expression: terminal.backend()
---
"                                    lflare · Landscape L2 Client                                    "
"Tab/Up Down navigate fields · focus Connect and press Enter · F2 show/hide PSK · l switch language ·"
"┌PSK (shared secret, F2 show/hide)─────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Username──────────────────────────────────────────────────────────────────────────────────────────┐"
"│admin                                                                                             │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Client name───────────────────────────────────────────────────────────────────────────────────────┐"
"│pc                                                                                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Device (Up Down select, Enter confirm)────────────────────────────────────────────────────────────┐"
"│  Auto (default route)                                                                            │"
"│▸ enp5s0                                                                                          │"
"│  Intel Wi-Fi 6 AX200 160MHz                                                                      │"
"│  USB 3.0 GbE (Realtek)                                                                           │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Ethertype─────────────────────────────────────────────────────────────────────────────────────────┐"
"│0x88b6                                                                                            │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Token (optional, must match server)───────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Connect───────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                              Connect                                             │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                                    "
"                                                                                                    "
